contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/ttl_configurable/fail/non_struct_input.rs
// UI (trybuild) negative test: `#[ttl_configurable]` must be applied to a struct.

#[common_macros::ttl_configurable]
pub enum NotAStruct {
    A,
}

fn main() {}
